# phantom-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  watch
.github/workflows/: Build(Linux)  build.yml  build_linux.yml  build_windows.yml  cmake-multi-platform.yml
phantom-engine/: CMakeLists.txt  README.md
phantom-engine/.github/workflows/: build_linux.yml
phantom-engine/src/: PhantomPch.h
phantom-engine/src/Components/: Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h
phantom-engine/src/Core/: Application.cpp  Application.h  Assert.h  Component.h  Core.h  Engine.cpp  Engine.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MeshLibrary.cpp  MeshLibrary.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Window.cpp  Window.h  WindowBase.cpp  WindowBase.h
phantom-engine/src/Core/Event_System/: Event.h
phantom-engine/src/Debug/: openglErrorReporting.cpp
phantom-engine/src/Event_System/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
phantom-engine/src/Math/: PHMath.h
phantom-engine/src/Renderer/: Core.cpp  ErrorReporting.h  Shader.h  Texture.cpp  gl3d.h
phantom-engine/src/Systems/: System.cpp  System.h
phantom-works/: CMakeLists.txt
phantom-works/src/: PhantomWorks.cpp
resources/: Suzanne.glb  Suzanne.gltf  floor.gltf
src/: PhantomEngine.h  YourGame.cpp  YourGame.h  main.cpp
src/Core/: Application.cpp  Application.h  Broadphase.cpp  Broadphase.h  Component.h  Core.h  Engine.cpp  Engine.h  EntryPoint.h  GameObject.cpp  GameObject.h  Log.cpp  Log.h  Math.h  PE_Core.cpp  Physics.cpp  Physics.h  Program.cpp  Program.h  Scene.cpp  Scene.h  constants.h
src/Core/Game/: Component.cpp  Component.h  Components.h  Object.cpp  Object.h  ObjectBehavior.h  Scene.cpp  Scene.h  Systems.h
src/Core/Game/Components/: ModelComponent.cpp  ModelComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  TransformComponent.cpp  TransformComponent.h
src/Core/Physics/: BodyActivationListener.h  BroadphaseLayer.h  Collision.cpp  Collision.h  ContactListener.h  ObjectLayer.h  ObjectVsBroadPhaseLayer.h  Physics.cpp  Physics.h  PhysicsEngine.cpp  PhysicsEngine.h
src/FearTheCrow/: DemoScene.cpp  DemoScene.h  Globals.h  PrototypeScene.cpp  PrototypeScene.h
src/FearTheCrow/Components/: CameraComponent.cpp  CameraComponent.h  ModelComponent.cpp  ModelComponent.h  TransformComponent.cpp  TransformComponent.h
src/FearTheCrow/Objects/: Player.cpp  Player.h
src/Math/: PHMath.h
src/engine/: main.cpp
src/engine/classes/: Player.cpp  Player.h
src/game/: FearTheCrow.cpp  YourGame.cpp  YourGame.h
